classDiagram
    ProductEntity <|-- TicketEntity
    ProductEntity <|-- PublicationEntity
    PublicationEntity <|-- BookEntity
    PublicationEntity <|-- MagazineEntity
    MagazineEntity <|-- DiscMagEntity
    SaleableItem <|.. ProductEntity
    Serializable <|.. ProductEntity
    ProductEntity <|-- ComputerHardwareEntity
    ComputerHardwareEntity <|-- CpuEntity
    ComputerHardwareEntity <|-- GpuEntity
    ProductEntity <-- CartEntity
    ProductEntity <-- OrderEntity

    class CartEntity {
        -Long id
        -Set<ProductEntity> products
        +addProduct(ProductEntity product)
        +Long getId()
        +setId(Long id)
        +Set<ProductEntity> getProducts()
        +setProducts(Set<ProductEntity> products)
        +CartEntity()
        +CartEntity(Set<ProductEntity> products)
        +String toString()
        +boolean equals(Object o)
        +int hashCode()
    }
    class ProductEntity{
        <<abstract>>
        -Long id
        -Set<CartEntity> carts
        +Set<CartEntity> getCarts()
        +setCarts(Set<CartEntity> carts)
        +Long getId()
        +setId(Long id)
        +String getProductType()
        +String toString()
    }
    class Serializable{
        <<interface>>
    }
    class TicketEntity{
        -String description
        -double price
        +TicketEntity()
        +TicketEntity(String d, double p)
        +sellItem()
        +double getPrice()
        +String getDescription()
        +setDescription(String d)
        +setPrice(double p)
        +String toString()
        +boolean equals(Object o)
        +int hashCode()
    }
    class PublicationEntity{
        <<abstract>>
        -String title
        -double price
        -int copies
        +PublicationEntity()
        +PublicationEntity(String t, double p, int c)
        +sellItem()
        +double getPrice()
        +String getTitle()
        +setTitle(String t)
        +setPrice(double p)
        +int getCopies()
        +setCopies(int c)
        +String toString()
        +boolean equals(Object o)
        +int hashCode()
    }
    class BookEntity{
        -String author
        -String isbn
        +BookEntity()
        +BookEntity(String t, double p, int c, String author, String isbn)
        +String getAuthor()
        +setAuthor(String a)
        +String getIsbn()
        +setIsbn(String isbn)
        +String toString()
        +boolean equals(Object o)
        +int hashCode()
    }
    class MagazineEntity{
        -int orderQty
        -LocalDateTime currentIssue
        +MagazineEntity()
        +MagazineEntity(String t, double p, int c, int o, LocalDateTime d)
        +int getOrderQty()
        +setOrderQty(int o)
        +setCurrentIssue(LocalDateTime d)
        +LocalDateTime getCurrentIssue()
        +String toString()
        +boolean equals(Object o)
        +int hashCode()
    }
    class DiscMagEntity{
        -boolean hasDisc
        +DiscMagEntity()
        +DiscMagEntity(String t, double p, int c, int o, LocalDateTime d, boolean h)
        +boolean isHasDisc()
        +setHasDisc(boolean h)
        +String toString()
        +boolean equals(Object o)
        +int hashCode()
    }
    class SaleableItem{
        <<interface>>
        +sellItem()
        +double getPrice()
    }
    class ComputerHardwareEntity{
        <<abstract>>
        -int warrantyMonths
        +int getWarrantyMonths()
        +setWarrantyMonths(int warrantyMonths)
        +ComputerHardwareEntity()
        +ComputerHardwareEntity(int warrantyMonths)
        +String toString()
        +boolean equals(Object o)
        +int hashCode()
    }
    class CpuEntity{
        -int coreCount
        +int getCoreCount()
        +setCoreCount(int coreCount)
        +CpuEntity()
        +CpuEntity(int warrantyMonths, int coreCount)
        +sellItem()
        +double getPrice()
        +String toString()
        +boolean equals(Object o)
        +int hashCode()
    }
    class GpuEntity{
        -int vramGb
        +int getVramGb()
        +setVramGb(int vramGb)
        +GpuEntity()
        +GpuEntity(int warrantyMonths, int vramGb)
        +sellItem()
        +double getPrice()
        +String toString()
        +boolean equals(Object o)
        +int hashCode()
    }
    class OrderEntity{
        -Long id
        -Set<ProductEntity> products
        -double totalAmount
        -LocalDateTime orderDate
        +Long getId()
        +setId(Long id)
        +double getTotalAmount()
        +setTotalAmount(double totalAmount)
        +LocalDateTime getOrderDate()
        +setOrderDate(LocalDateTime orderDate)
        +Set<ProductEntity> getProducts()
        +setProducts(Set<ProductEntity> products)
    }